[package]
name = "luz"
version = "0.1.0"
edition = "2021"

[dependencies]
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["from", "into"] }
lazy_static = "1.5.0"
pest = "2.7.13"
pest_derive = { version = "2.7.13", features = ["grammar-extras"] }
thiserror = "1.0.64"
