[package]
name = "luz"
version = "0.1.0"
edition = "2021"

[lib]
name = "luz"
path = "src/lib.rs"

[[bin]]
name = "luz_bin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_more = { version = "1.0.0", features = ["from", "into"] }
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.28"
num_enum = "0.7.4"
pest = "2.7.13"
pest_derive = { version = "2.7.13", features = ["grammar-extras"] }
thiserror = "1.0.64"
